[package]
name = "tungstenite-example"
version = "0.1.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
http = "0.2.1"
tokio-tungstenite = "0.10.1"
